[DEV] - implement caching and improve docker deploy